force-app/main/default/objects/giic_IntegrationMapping__mdt/giic_IntegrationMapping__mdt.object-meta.xml
<CustomObject>
    <description>This Object is used to create mapping of fields of source sobject to fields of target sobject</description>
    <label>Integration Mapping</label>
    <pluralLabel>Integration Mappings</pluralLabel>
</CustomObject>