force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_DeActivated__c.field-meta.xml
<CustomField>
    <fullName>giic_DeActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We can deactivate a particular field mapping</description>
    <label>DeActivated</label>
    <type>Checkbox</type>
</CustomField>