force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_ExternalField__c.field-meta.xml
<CustomField>
    <fullName>giic_ExternalField__c</fullName>
    <description>External Field API of Sobject</description>
    <label>External Field</label>
    <metadataRelationshipControllingField>giic_IntegrationMapping__mdt.giic_ExternalSObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Integration_Mappings</relationshipLabel>
    <relationshipName>Integration_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>