force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_ExternalSObject__c.field-meta.xml
<CustomField>
    <fullName>giic_ExternalSObject__c</fullName>
    <description>External Sobject API of Sobject</description>
    <label>External SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Integration_Mappings</relationshipLabel>
    <relationshipName>Integration_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>