force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_IsDataTypeCheck__c.field-meta.xml
<CustomField>
    <fullName>giic_IsDataTypeCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDataTypeCheck</label>
    <type>Checkbox</type>
</CustomField>