force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_IsErrorMapping__c.field-meta.xml
<CustomField>
    <fullName>giic_IsErrorMapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark TRUE and give Field of API name of Integration Error (you can create lookup field of source sobject into Integration error sobject) on which current Source Object will show integration error record</description>
    <label>IsErrorMapping</label>
    <type>Checkbox</type>
</CustomField>