force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_IsExternal__c.field-meta.xml
<CustomField>
    <fullName>giic_IsExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark as True if we need to use External Field binding, not sfdc id</description>
    <label>IsExternal</label>
    <type>Checkbox</type>
</CustomField>