force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_IsParentField__c.field-meta.xml
<CustomField>
    <fullName>giic_IsParentField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark TRUE if source field is Parent relationship of line sobject so that it can be used in where clause</description>
    <label>IsParentField</label>
    <type>Checkbox</type>
</CustomField>