force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_IsSourceField__c.field-meta.xml
<CustomField>
    <fullName>giic_IsSourceField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark TRUE if the field of sobject header will have source information (i.e. Iniste, OMS, OLP) so that we can grouping of validation accordingly</description>
    <label>IsSourceField</label>
    <type>Checkbox</type>
</CustomField>