force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_SourceField__c.field-meta.xml
<CustomField>
    <fullName>giic_SourceField__c</fullName>
    <description>Select Source Field API</description>
    <label>Source Field</label>
    <metadataRelationshipControllingField>giic_IntegrationMapping__mdt.giic_SourceObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Integration Details Source Field</relationshipLabel>
    <relationshipName>IntegrationDetailsSourceField</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>