force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_SourceObject__c.field-meta.xml
<CustomField>
    <fullName>giic_SourceObject__c</fullName>
    <description>Select Source Object</description>
    <label>Source Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Integration Details Source Object</relationshipLabel>
    <relationshipName>IntegrationDetailsSourceObject</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>