force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_TargetField__c.field-meta.xml
<CustomField>
    <fullName>giic_TargetField__c</fullName>
    <description>Select Target Sobject Field</description>
    <label>Target Field</label>
    <metadataRelationshipControllingField>giic_IntegrationMapping__mdt.giic_TargetObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Integration Details Target Field</relationshipLabel>
    <relationshipName>IntegrationDetailsTargetField</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>