force-app/main/default/objects/giic_IntegrationMapping__mdt/fields/giic_TargetObject__c.field-meta.xml
<CustomField>
    <fullName>giic_TargetObject__c</fullName>
    <description>Select Target Sobject</description>
    <label>Target Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Integration Details Target Object</relationshipLabel>
    <relationshipName>IntegrationDetailsTargetObject</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>