force-app/main/default/objects/giic_IntegrationMapping__mdt/listViews/Integration_Mapping_View.listView-meta.xml
<ListView>
    <fullName>Integration_Mapping_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>giic_SourceObject__c</columns>
    <columns>giic_SourceField__c</columns>
    <columns>giic_TargetObject__c</columns>
    <columns>giic_TargetField__c</columns>
    <filterScope>Everything</filterScope>
    <label>Integration Mapping View</label>
    <language>en_US</language>
</ListView>